--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>Amaury Janneteau - Portefolio</title>
+        <title>Amaury Janneteau - Portfolio</title>
     </head>
     <body>
         <div class="parallax-container">
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="container">
-            <h2 class="center-align bold">Portefolio</h2>
+            <h2 class="center-align bold">Portfolio</h2>
         </div>
         <div class="row center-align valign-wrapper">
             <div class="col s3">
